# customer-support-openenv

./: .gitignore  Dockerfile  LICENSE  README.md  inference.py  openenv.yaml  pyproject.toml  requirements.txt
server/: app.py
src/core/: types.py
src/envs/customer_support_env/: __init__.py  client.py  models.py
src/envs/customer_support_env/server/: app.py  environment.py
