[project]
name = "customer-support-openenv"
version = "1.0.0"
description = "Customer Support Triage OpenEnv Environment"
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.111.0",
    "uvicorn==0.30.1",
    "pydantic==2.7.1",
    "requests==2.32.3",
    "openai==1.30.0",
    "openenv-core>=0.2.0",
]

[project.scripts]
server = "server.app:main"

[tool.openenv]
name = "customer-support-openenv"
version = "1.0.0"
tasks = ["easy", "medium", "hard"]